static/css/custom.css
/*
/*
/*  custom.css
/*
/*  If not using Gulp and Sass, add your custom CSS below then include it
/*  in your page by adding a reference to assets/css/custom.css in the head of each page.
/*
*/

.card {
    height: 180px;
}

.bordered {
    border-top: 1px #e1e4e8 solid !important;
    border-bottom: 1px #e1e4e8 solid !important;
}

.light-text {
    color: #fff;
}

@media (min-width: 768px) {
  /* show 3 items */
  .carousel-inner .active,
  .carousel-inner .active + .carousel-item,
  .carousel-inner .active + .carousel-item + .carousel-item {
    display: block;
  }

  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
    transition: none;
  }

  .carousel-inner .carousel-item-next,
  .carousel-inner .carousel-item-prev {
    position: relative;
    transform: translate3d(0, 0, 0);
  }

  .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
    position: absolute;
    top: 0;
    right: -33.3333%;
    z-index: -1;
    display: block;
    visibility: visible;
  }

  /* left or forward direction */
  .active.carousel-item-left + .carousel-item-next.carousel-item-left,
  .carousel-item-next.carousel-item-left + .carousel-item,
  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
    position: relative;
    transform: translate3d(-100%, 0, 0);
    visibility: visible;
  }

  /* farthest right hidden item must be abso position for animations */
  .carousel-inner .carousel-item-prev.carousel-item-right {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    display: block;
    visibility: visible;
  }

  /* right or prev direction */
  .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
  .carousel-item-prev.carousel-item-right + .carousel-item,
  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
    position: relative;
    transform: translate3d(100%, 0, 0);
    visibility: visible;
    display: block;
    visibility: visible;
  }
}

#pointers {
    margin-top: 40px;
    margin-bottom: 40px;
}

#statement {
    transform: rotate(5deg);
}

#banner {
  margin-top: 100px;
}

.app-graph {
    width: 150%;
    position: absolute;
    right: 0;
    bottom: -40px;
}

.block-fill-height {
    display: table;
    width: 100%;
    height: 100vh;
}

.article {
  background-color: white;
  color: #333;
}

.bg-darkish {
  background-color: #333;
}

.scolled {
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
}

.bg-green-wall {
  background-color: #9ddb5e;
}

.bg-green p a,
.bg-green li a,
.bg-green a:hover,
.bg-green p a:link,
.bg-green nav.flex-md-column .nav-link.active {
    color: #9ddb5e;
}

.qs-input--radio:checked + .qs-label {
    color: #fff;
    border-color: #9ddb5e;
    background: #9ddb5e;
}

blockquote {
    padding-left: 1.2rem;
    border-left: .4rem solid rgba(0,0,0,.26);
    color: rgba(0,0,0,.54);
}

code[class*="language-"], pre[class*="language-"], .qs-code {
    background-color: rgba(0,0,0,.025);
    overflow: auto;
    padding: 1em;
    border-radius: 3px;
    line-height: 1.45;
    color: #333;
    text-shadow: none;
    font-size: 13px;
}

code[class*="hljs"] {
    display: block;
    overflow-x: auto;
    padding: 0.5em;
    background: none;
}

